# db-selection-test

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.opencode/command/: learn.md
docs/: ALGORITHM.md  BEST_PRACTICES.md  COMMUNICATION_LOG.md  CRM_POC_SPEC.md  DECISION_RATIONALE.md  PERFORMANCE_ANALYSIS_POSTGRESQL_VS_MYSQL.md  POSTGRES_BASELINE_OPTIMIZATIONS.md  project-guidelines.md
docs/examples/: design-rfc-communication-patterns.md  shell-command-patterns.md
docs/plans/: 2026-03-30-remove-psql-dependency.md  2026-03-31-performance-doc-refresh.md
docs/plans/completed/: 2026-03-30-remove-psql-dependency.md
docs/scripts/: RUN_MODES.md
scripts/: run_local.sh  run_on_dba_env.sh
sql/: 000_cleanup.sql  001_schema.sql  002_indexes.sql  003_seed_static.sql  004_queries_core.sql  004_queries_core_pg18.sql  005_queries_complex.sql  005_queries_complex_pg18.sql  006_bloat_workload.sql  007_bloat_metrics.sql
src/poc/: __init__.py  collect_report.py  config.py  db.py  generate_data.py  load_data.py  run_queries.py  run_sql_file.py  sql_runner.py
tests/: test_run_queries.py  test_sql_runner.py
